<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">

        <TextView android:text="@string/create_limit" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

        <DatePicker android:id="@+id/limitStartDate" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <DatePicker android:id="@+id/limitEndDate" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etWaterAmount" android:hint="@string/enter_water" android:inputType="numberDecimal"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/etDeviceNumber" android:hint="@string/enter_device" android:inputType="number"
            android:layout_width="match_parent" android:layout_height="wrap_content"/>

        <Button android:id="@+id/btnCreateLimit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_limit"/>

        <TextView android:id="@+id/tvLimitsResult" android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="" android:paddingTop="16dp"/>

    </LinearLayout>
</ScrollView>
